--- a/Class 03-css/scss/_estilos.scss
+++ b/Class 03-css/scss/_estilos.scss
@@ -1,4 +1,6 @@
 
-body{
-    background-color: red;
-}
+@import "./variables";
+@import "./footer";
+@import "./home";
+@import "./productos";
+@import "./nav";
